--- a/password.html
+++ b/password.html
@@ -1,16 +1,8 @@
+
+
+
 <head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-117438573-1"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-
-		gtag('config', 'UA-117438573-1');
-	</script>
-
-
-	<title>About — Andrew Thompson</title>
+  <title>Andrew Thompson</title>
 
 	<link rel="stylesheet" type="text/css" href="main 2.css">
 
@@ -18,58 +10,39 @@
 	<link rel="stylesheet" href="animsition.min.css">
 
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-
-	<link rel="stylesheet" href="https://cdn.plyr.io/3.5.10/plyr.css" />
-	<script src="https://cdn.plyr.io/3.5.10/plyr.js"></script>
-
-	<script src="js/barba.min.js"></script>
-	<script src="js/flowtype.js"></script>
-	<script src="js/jquery.center.min.js"></script>
+	
 	<script src="js/animsition.min.js"></script>
-	<script src="js/jquery.unveil.js"></script>
-
 
 	<link rel="icon" media="(prefers-color-scheme:dark)" href="img/favicon-dark.png" type="image/png" />
   <link rel="icon" media="(prefers-color-scheme:light)" href="img/favicon-light.png" type="image/png" />
 	<script src="https://unpkg.com/favicon-switcher@1.2.2/dist/index.js" crossorigin="anonymous" type="application/javascript"></script>
 
+  <script src="auth.js"></script>
 </head>
 
-
 <script>
-	$(document).ready(function(){
+  var destURL = "";
 
-		$("body").children().each(function() {
-				document.body.innerHTML = document.body.innerHTML.replace(/\u2028/g, ' ');
-		});
+  if (checkCookie ("destURL")) {
+    destURL = getCookie ("destURL");
+  } else {
+    destURL = "www.andrewthompson.me";
+  }
 
-	// 	$(".animsition").animsition({
-	// 		inClass: 'fade-in-up-sm',
-  //   		outClass: 'fade-out-up-sm',
-	// 		inDuration: 800,
-	// 		outDuration: 800,
-	// 		linkElement: '.animsition-link',
-	// 		// e.g. linkElement: 'a:not([target="_blank"]):not([href^="#"])'
-	// 		loading: true,
-	// 		loadingParentElement: 'body', //animsition wrapper element
-	// 		loadingClass: 'animsition-loading',
-	// 		loadingInner: '', // e.g '<img src="loading.svg" />'
-	// 		timeout: true,
-	// 		timeoutCountdown: 0,
-	// 		onLoadEvent: true,
-	// 		browser: [ 'animation-duration', '-webkit-animation-duration'],
-	// 		// "browser" option allows you to disable the "animsition" in case the css property in the array is not supported by your browser.
-	// 		// The default setting is to disable the "animsition" in a browser that does not support "animation-duration".
-	// 		overlay : false,
-	// 		overlayClass : 'animsition-overlay-slide',
-	// 		overlayParentElement : 'body',
-	// 		transition: function(url){ window.location.href = url; }
-	// 	});
-	// });
+  function onFormSubmission (userEntry) {
+    if (!authCheck(destURL, userEntry)) {
+      // clear form
+      // write copy "incorrect password"
+    }
+  }
+
+
 </script>
+
 
 <body>
 	<div class="animistion">
+
 	<div id="nav_bar">
 		<a id="logo" class="animsition-link" href="index.html">
 			<svg height="100%" viewBox="0 0 208 70" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -88,51 +61,12 @@
 	</div>
 
 	<div id="page_container">
-		<div id="post_container">
-			<img class="medium_image" style="grid-column: 1/3" src="img/bg.png" data-src="img/headshot.jpg">
-			<div class="medium_image_caption" style="grid-column: 3/6"><p>
+		<div class="gap"></div>
 
-				My first experience in advertising was getting stuck on the side of a
-				toy box, without my knowledge. Seven years later and it's still there.
-				Now, I'm looking for opportunities to stick photos of people onto boxes,
-				billboards, and small little rectangles in websites. It's like the circle
-				of life, but with time sheets and blue light glasses.
-					</p><p>
-				Hi, I'm Andrew, and I like to design stuff. I have an unhealthy love for
-				RGB hex codes, Muji notebooks, and Italian soda from Trader Joe’s. You
-				can usually find me coffee in hand, bbq in stomach, trying to find a
-				place to park that doesn't cost an arm and a leg (without parallel parking).
-					</p>
-
-					<!-- Hi, I'm Andrew, and I like to design stuff. I have an unhealthy love for
-					RGB hex codes, Muji notebooks, and Italian soda from Trader Joe’s. You
-					can usually find me coffee in hand, bbq in stomach, trying to find a place
-					to park that doesn't cost an arm and a leg (without parallel parking).</p>
-
-					<p>I like to think of myself as a minimalist urbanist&mdash;which is just
-					a fancy way of saying that I don't care how big or small the city I live
-					in is. So I'm happy anywhere from NYC to Providence. But what I like to
-					geek out over the most, is history. Finding out where things come from
-					and how they got there is my jam.</p> -->
-
-					<div class="gap" style="height: 1vh;"></div>
-
-					<h3>Contact Me</h3>
-					<p><a class="animsition-link" style="text-decoration: underline;" href="https://www.linkedin.com/in/andrew-l-thompson/">Linkedin</a></p>
-					<p><a class="animsition-link" style="text-decoration: underline;" href="mailto:me@andrewthompson.me?Subject=Hey!">Email</a></p>
-					<p><a class="animsition-link" style="text-decoration: underline;" href="https://www.instagram.com/andrew_thhompson/">Instagram</a></p>
-
-					<div class="gap" style="height: 1vh;"></div>
-
-					<h3>Read more about me</h3>
-					<p><a class="animsition-link" style="text-decoration: underline;" href="https://www.dropbox.com/s/2z1os37tprg1m54/Andrew%20Thompson%20Resume%20%E2%80%94%20April%202020.pdf?dl=0">View my Resume</a></p>
-			 </div>
-		</div>
 	</div>
 
 	<script>
 		$(document).ready(function(){
-			$("img").unveil();
 			$(".animsition").animsition({
 				inClass: 'fade-in-up-sm',
 	    		outClass: 'fade-out-up-sm',
@@ -145,7 +79,7 @@
 				loadingClass: 'animsition-loading',
 				loadingInner: '', // e.g '<img src="loading.svg" />'
 				timeout: true,
-				timeoutCountdown: 2000,
+				timeoutCountdown: 200,
 				onLoadEvent: true,
 				browser: [ 'animation-duration', '-webkit-animation-duration'],
 				// "browser" option allows you to disable the "animsition" in case the css property in the array is not supported by your browser.
@@ -154,8 +88,7 @@
 				overlayClass : 'animsition-overlay-slide',
 				overlayParentElement : 'body',
 				transition: function(url){ window.location.href = url; }
-			// });
-		});
+			});
 		});
 	</script>
 	</div>
