--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
 				<div class="portfolioName">Wienerschnitzel</div>
 			</a>
 
-			<div class="gap"></div>
-			<div class="gap"></div>
-			<div class="gap"></div>
-			<div class="gap"></div>
+			<!-- <div class="gap"></div>
+			<div class="gap"></div> -->
+			<!-- <div class="gap"></div>
+			<div class="gap"></div> -->
 
 		</div>
 	</div>
