--- a/password.html
+++ b/password.html
@@ -7,11 +7,11 @@
 	<link rel="stylesheet" type="text/css" href="main 2.css">
 
 	<link rel="stylesheet" href="https://use.typekit.net/ujg8zyh.css">
-	<link rel="stylesheet" href="animsition.min.css">
+	<!-- <link rel="stylesheet" href="animsition.min.css"> -->
 
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-	
-	<script src="js/animsition.min.js"></script>
+
+	<!-- <script src="js/animsition.min.js"></script> -->
 
 	<link rel="icon" media="(prefers-color-scheme:dark)" href="img/favicon-dark.png" type="image/png" />
   <link rel="icon" media="(prefers-color-scheme:light)" href="img/favicon-light.png" type="image/png" />
@@ -20,7 +20,7 @@
   <script src="auth.js"></script>
 </head>
 
-<script>
+<!-- <script>
   var destURL = "";
 
   if (checkCookie ("destURL")) {
@@ -37,11 +37,11 @@
   }
 
 
-</script>
+</script> -->
 
 
 <body>
-	<div class="animistion">
+	<!-- <div class="animistion"> -->
 
 	<div id="nav_bar">
 		<a id="logo" class="animsition-link" href="index.html">
@@ -60,36 +60,29 @@
 		<a id="about" class="animsition-link" href="about.html">ABOUT</a>
 	</div>
 
-	<div id="page_container">
-		<div class="gap"></div>
-
+	<div id="password_container">
+		<input id="password_form">
+    <button type="button" onclick="">Submit</button>
 	</div>
-
-	<script>
+	<!-- </div> -->
+  <script>
 		$(document).ready(function(){
-			$(".animsition").animsition({
-				inClass: 'fade-in-up-sm',
-	    		outClass: 'fade-out-up-sm',
-				inDuration: 800,
-				outDuration: 800,
-				linkElement: '.animsition-link',
-				// e.g. linkElement: 'a:not([target="_blank"]):not([href^="#"])'
-				loading: true,
-				loadingParentElement: 'body', //animsition wrapper element
-				loadingClass: 'animsition-loading',
-				loadingInner: '', // e.g '<img src="loading.svg" />'
-				timeout: true,
-				timeoutCountdown: 200,
-				onLoadEvent: true,
-				browser: [ 'animation-duration', '-webkit-animation-duration'],
-				// "browser" option allows you to disable the "animsition" in case the css property in the array is not supported by your browser.
-				// The default setting is to disable the "animsition" in a browser that does not support "animation-duration".
-				overlay : false,
-				overlayClass : 'animsition-overlay-slide',
-				overlayParentElement : 'body',
-				transition: function(url){ window.location.href = url; }
-			});
+      console.log("Destination URL: " + getCookie("destURL"));
+      console.log(getCookie("destURL"));
+      authCheck(getCookie("destURL"), "fuck");
+
+
+      setCookie("Test", "Hi", 1);
+      console.log("cookie Test: " + getCookie("Test"));
+
+      // function passwordCheck() {
+      //   var pword = $("#password_form").val();
+      //   if (!pword) {
+      //     console.log("password form blank");
+      //     return false;
+      //   }
+      //   authcheck(getCookie("destURL"), pword);
+      // }
 		});
 	</script>
-	</div>
 </body>
