--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
 			<div class="label" style="grid-area: label; width: 100%; padding-top: 1vw;">NSAC Campaigns</div>
 
-			<a id="adobe" class="portfolio animistion-ink" href="index.html">
+			<a id="adobe" class="portfolio animistion-ink" href="adobe_gate.html">
 				<div class="portfolioName">Adobe</div>
 			</a>
 
