Password form should work now

--- a/adobe_gate.html
+++ b/adobe_gate.html
@@ -34,7 +34,7 @@
 
 <script>
   $(document).ready(function(){
-    console.log("checking auth state");
+    // console.log("checking auth state");
     authGate("adobe.html");
   });
 </script>
