--- a/password.html
+++ b/password.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet" type="text/css" href="main 2.css">
 
 	<link rel="stylesheet" href="https://use.typekit.net/ujg8zyh.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap" rel="stylesheet">
+
 	<!-- <link rel="stylesheet" href="animsition.min.css"> -->
 
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
@@ -18,29 +20,22 @@
 	<script src="https://unpkg.com/favicon-switcher@1.2.2/dist/index.js" crossorigin="anonymous" type="application/javascript"></script>
 
   <script src="auth.js"></script>
+
+  <script>
+    function passwordCheck () {
+      // console.log("password entered");
+      var pword = $("#password_form").val();
+      if (!pword) {
+        // console.log("password form blank");
+        return false;
+      }
+      // console.log("Cookie for destination url: " + getCookie("destURL"));
+      authCheck(getCookie("destURL"), pword);
+    }
+  </script>
 </head>
 
-<!-- <script>
-  var destURL = "";
-
-  if (checkCookie ("destURL")) {
-    destURL = getCookie ("destURL");
-  } else {
-    destURL = "www.andrewthompson.me";
-  }
-
-  function onFormSubmission (userEntry) {
-    if (!authCheck(destURL, userEntry)) {
-      // clear form
-      // write copy "incorrect password"
-    }
-  }
-
-
-</script> -->
-
-
-<body>
+<body style="background-color: #20386D;">
 	<!-- <div class="animistion"> -->
 
 	<div id="nav_bar">
@@ -61,28 +56,21 @@
 	</div>
 
 	<div id="password_container">
-		<input id="password_form">
-    <button type="button" onclick="">Submit</button>
+		<input id="password_form" placeholder="Password" type="password">
+    <button id="password_button" type="button" onclick="passwordCheck()">-></button>
 	</div>
 	<!-- </div> -->
   <script>
 		$(document).ready(function(){
-      console.log("Destination URL: " + getCookie("destURL"));
-      console.log(getCookie("destURL"));
-      authCheck(getCookie("destURL"), "fuck");
+      // console.log("Destination URL: " + getCookie("destURL"));
+      // console.log(getCookie("destURL"));
 
-
-      setCookie("Test", "Hi", 1);
-      console.log("cookie Test: " + getCookie("Test"));
-
-      // function passwordCheck() {
-      //   var pword = $("#password_form").val();
-      //   if (!pword) {
-      //     console.log("password form blank");
-      //     return false;
-      //   }
-      //   authcheck(getCookie("destURL"), pword);
-      // }
+      $('#password_form').keypress(function(event) {
+        if (event.keyCode == 13 || event.which == 13) {
+          passwordCheck();
+        }
+      });
+      // authCheck(getCookie("destURL"), "fuck");
 		});
 	</script>
 </body>
