--- a/password.html
+++ b/password.html
@@ -30,7 +30,10 @@
         return false;
       }
       // console.log("Cookie for destination url: " + getCookie("destURL"));
-      authCheck(getCookie("destURL"), pword);
+      if(!authCheck(getCookie("destURL"), pword)) {
+        $('#password_form').reset();
+        $('#password_form')..attr('placeholder','Password Incorrect');
+      }
     }
   </script>
 </head>
