--- a/password.html
+++ b/password.html
@@ -32,7 +32,7 @@
       // console.log("Cookie for destination url: " + getCookie("destURL"));
       if(!authCheck(getCookie("destURL"), pword)) {
         $('#password_form').reset();
-        $('#password_form')..attr('placeholder','Password Incorrect');
+        $('#password_form').attr('placeholder','Password Incorrect');
       }
     }
   </script>
