--- a/password.html
+++ b/password.html
@@ -31,7 +31,7 @@
       }
       // console.log("Cookie for destination url: " + getCookie("destURL"));
       if(!authCheck(getCookie("destURL"), pword)) {
-        $('#password_form').reset();
+        $('#password_form')[0].reset();
         $('#password_form').attr('placeholder','Password Incorrect');
       }
     }
