--- a/password.html
+++ b/password.html
@@ -31,7 +31,7 @@
       }
       // console.log("Cookie for destination url: " + getCookie("destURL"));
       if(!authCheck(getCookie("destURL"), pword)) {
-        $('#password_form')[0].reset();
+        $('#password_container').reset();
         $('#password_form').attr('placeholder','Password Incorrect');
       }
     }
@@ -58,10 +58,10 @@
 		<a id="about" class="animsition-link" href="about.html">ABOUT</a>
 	</div>
 
-	<div id="password_container">
+	<form id="password_container">
 		<input id="password_form" placeholder="Password" type="password">
     <button id="password_button" type="button" onclick="passwordCheck()">-></button>
-	</div>
+	</form>
 	<!-- </div> -->
   <script>
 		$(document).ready(function(){
