--- a/password.html
+++ b/password.html
@@ -32,7 +32,8 @@
       // console.log("Cookie for destination url: " + getCookie("destURL"));
       if(!authCheck(getCookie("destURL"), pword)) {
         $('#password_form').attr('placeholder','Password Incorrect');
-        $('#password_container').reset();
+        // $('#password_container').reset();
+        $('#password_form').value = "";
       }
     }
   </script>
