--- a/password.html
+++ b/password.html
@@ -23,16 +23,15 @@
 
   <script>
     function passwordCheck () {
-      // console.log("password entered");
+      console.log("password entered");
       var pword = $("#password_form").val();
       if (!pword) {
-        // console.log("password form blank");
+        console.log("password form blank");
         return false;
       }
-      // console.log("Cookie for destination url: " + getCookie("destURL"));
-      if(!authCheck(getCookie("destURL"), pword)) {
+      console.log("Cookie for destination url: " + getCookie("destURL"));
+      if(authCheck(getCookie("destURL"), pword) != 0) {
         $('#password_form').attr('placeholder','Password Incorrect');
-        // $('#password_container').reset();
         $('#password_form').value = "";
       }
     }
