--- a/password.html
+++ b/password.html
@@ -70,6 +70,7 @@
 
       $('#password_form').keypress(function(event) {
         if (event.keyCode == 13 || event.which == 13) {
+          console.log("hit");
           passwordCheck();
         }
       });
