--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@
 				<div class="portfolioName">Unplug</div>
 			</a>
 
+			<a id="hello" class="portfolio animistion-ink" href="hello.html">
+				<div class="portfolioName">Hello</div>
+			</a>
+
 			<a id="att" class="portfolio animistion-ink" href="att.html">
 				<div class="portfolioName">AT&T Business</div>
 			</a>
@@ -133,25 +137,25 @@
 				<div class="portfolioName">Pangea.app</div>
 			</a>
 
-			<a id="unicef" class="portfolio animistion-ink" href="unicef.html">
+			<!-- <a id="unicef" class="portfolio animistion-ink" href="unicef.html">
 				<div class="portfolioName">UNICEF</div>
 			</a>
 
 			<a id="upserve" class="portfolio animistion-ink" href="upserve.html">
 				<div class="portfolioName">Upserve</div>
-			</a>
+			</a> -->
 
-			<div class="gap"></div>
+			<!-- <div class="gap"></div>
 
-			<div class="label" style="grid-area: label; width: 100%; padding-top: 1vw;">NSAC Campaigns</div>
+			<div class="label" style="grid-area: label; width: 100%; padding-top: 1vw;">NSAC Campaigns</div> -->
 
 			<a id="adobe" class="portfolio animistion-ink" href="adobe_gate.html">
 				<div class="portfolioName">Adobe</div>
 			</a>
 
-			<a id="ws" class="portfolio animistion-ink" href="index.html">
+			<!-- <a id="ws" class="portfolio animistion-ink" href="index.html">
 				<div class="portfolioName">Wienerschnitzel</div>
-			</a>
+			</a> -->
 
 			<!-- <div class="gap"></div>
 			<div class="gap"></div> -->
