--- a/password.html
+++ b/password.html
@@ -25,12 +25,12 @@
     function passwordCheck () {
       console.log("password entered");
       var pword = $("#password_form").val();
-      if (!pword) {
+      if (pword == "") {
         console.log("password form blank");
         return false;
       }
       console.log("Cookie for destination url: " + getCookie("destURL"));
-      if(authCheck(getCookie("destURL"), pword) != 0) {
+      if(authCheck(getCookie("destURL"), pword) == 1) {
         $('#password_form').attr('placeholder','Password Incorrect');
         $('#password_form').value = "";
       }
