--- a/password.html
+++ b/password.html
@@ -31,6 +31,7 @@
       }
       console.log("Cookie for destination url: " + getCookie("destURL"));
       if(authCheck(getCookie("destURL"), pword) == 1) {
+        console.log("User entry " + pword + " was not correct");
         $('#password_form').attr('placeholder','Password Incorrect');
         $('#password_form').value = "";
       }
