--- a/adobe_gate.html
+++ b/adobe_gate.html
@@ -34,7 +34,7 @@
 
 <script>
   $(document).ready(function(){
-    // console.log("checking auth state");
+    console.log("Auth state="+getCookie("authState"));
     authGate("adobe.html");
   });
 </script>
