--- a/password.html
+++ b/password.html
@@ -30,7 +30,7 @@
         return false;
       }
       console.log("Cookie for destination url: " + getCookie("destURL"));
-      if(authCheck(getCookie("destURL"), pword) == 1) {
+      if(authCheck(getCookie("destURL"), pword) == false) {
         console.log("User entry " + pword + " was not correct");
         $('#password_form').attr('placeholder','Password Incorrect');
         $('#password_form').value = "";
