--- a/password.html
+++ b/password.html
@@ -71,8 +71,10 @@
 
       $('#password_form').keypress(function(event) {
         if (event.keyCode == 13 || event.which == 13) {
+          event.preventDefault();
           console.log("hit");
-          passwordCheck();
+          document.getElementById("password_button").click();
+          // passwordCheck();
         }
       });
       // authCheck(getCookie("destURL"), "fuck");
