--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		gtag('config', 'UA-117438573-1');
 	</script>
 
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<title>Andrew Thompson</title>
 
