--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 			</div>
 		</div>
 		<div class="gap"></div>
-		<div class="label">Work</div>
+		<div class="label label_home">Work</div>
 		<div id="portfolio_container">
 			<a id="just" class="portfolio animistion-ink" href="just.html">
 				<div class="portfolioName">JUST Water</div>
