--- a/dunkin.html
+++ b/dunkin.html
@@ -10,6 +10,8 @@
 	</script>
 
 
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 	<title>Dunkin' &mdash; Andrew Thompson</title>
 
 	<link rel="stylesheet" type="text/css" href="main 2.css">
