--- a/password.html
+++ b/password.html
@@ -2,7 +2,9 @@
 
 
 <head>
-  <title>Andrew Thompson</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<title>Andrew Thompson</title>
 
 	<link rel="stylesheet" type="text/css" href="main 2.css">
 
