--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
 
 	<div id="page_container">
 		<div id="post_container">
-			<img class="medium_image" style="grid-column: 1/3" src="img/bg.png" data-src="img/headshot.jpg">
+			<img class="medium_image" style="grid-column: 1/3" src="img/bg.png" data-src="img/pixie.jpg">
 			<div class="medium_image_caption" style="grid-column: 3/6; font-size: 1.25em; font-weight: 300;"><p>
 
 				My first experience in advertising was getting stuck on the side of a
