--- a/about.html
+++ b/about.html
@@ -94,8 +94,8 @@
 			<img class="medium_image" style="grid-column: 1/3" src="img/bg.png" data-src="img/pixie.jpg">
 			<div class="medium_image_caption" style="grid-column: 3/6; font-size: 1.25em; font-weight: 300;"><p>
 
-				My first experience in advertising was getting stuck on the side of a
-				toy box without my knowledge. Seven years later and it's still there.
+				My first experience in advertising was having my picture plastered on the
+				side of a toy box without my knowledge. Seven years later and it's still there.
 				Now, I'm looking for opportunities to stick photos of people onto boxes,
 				billboards, and small little rectangles in websites. It's like the circle
 				of life, but with time sheets and blue light glasses.
